ingress-project/deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  namespace: ingress-nginx
  labels:
    app: dp2
  name: dp2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dp2
  strategy: {}
  template:
    metadata:
      labels:
        app: dp2
    spec:
      containers:
      - image: muditdocker00/games:v1
        name: nginx
        resources: {}
status: {}
