ingress-project/Service1.yml
apiVersion: v1
kind: Service
metadata:
        name: service1
        labels: 
                    app: appservice
spec:
        type: ClusterIP
        selector:
                     app: dp1
        ports:
                - port: 80
                  targetPort: 80
