ingress-project/Service2.yml
apiVersion: v1
kind: Service
metadata:
        name: service2
        labels:
             app: gameservice
spec:
        type: ClusterIP
        selector:
                     app: dp2
        ports:
                - port: 80
                  targetPort: 80
